
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ get_4kstack_top () ;
 scalar_t__ get_8kstack_top () ;

__attribute__((used)) static inline void *get_current()
{
      void *cur = *(void **)get_4kstack_top();
      if( ( (unsigned int *)cur >= (unsigned int *)0xc0000000 ) && ( *(unsigned int *)cur == 0 ) )
            return cur;
 else
       cur = *(void **)get_8kstack_top();
 return cur;
}
