; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_33321.c_get_current.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_33321.c_get_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_current to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_current() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i64 (...) @get_4kstack_top()
  %4 = inttoptr i64 %3 to i8**
  %5 = load i8*, i8** %4, align 8
  store i8* %5, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = icmp uge i32* %7, inttoptr (i64 3221225472 to i32*)
  br i1 %8, label %9, label %16

9:                                                ; preds = %0
  %10 = load i8*, i8** %2, align 8
  %11 = bitcast i8* %10 to i32*
  %12 = load i32, i32* %11, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i8*, i8** %2, align 8
  store i8* %15, i8** %1, align 8
  br label %22

16:                                               ; preds = %9, %0
  %17 = call i64 (...) @get_8kstack_top()
  %18 = inttoptr i64 %17 to i8**
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %16
  %21 = load i8*, i8** %2, align 8
  store i8* %21, i8** %1, align 8
  br label %22

22:                                               ; preds = %20, %14
  %23 = load i8*, i8** %1, align 8
  ret i8* %23
}

declare dso_local i64 @get_4kstack_top(...) #1

declare dso_local i64 @get_8kstack_top(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
